# Webserv-42

./: CMakeLists.txt  Makefile  README.md  Webserv.md  main.cpp
Config/: Config.cpp  Config.hpp  Node.h
Config/config/: ConfigExceptions.h  ConfigParse.cpp
Config/location/: ErrPage.cpp  LimitExcept.cpp  Location.cpp  Location.h
Config/server_configuration/: ServerConfigurationLocationHandler.cpp  ServerConfigurationLocationSearch.cpp
Servers/includes/: HttpRequest.hpp  HttpResponse.hpp  Server.hpp  ServersManager.hpp
Servers/src/: HttpRequest.cpp  HttpResponse.cpp  Server.cpp  ServersManager.cpp
Sockets/includes/: BindingSocket.hpp  SimpleSocket.hpp
Sockets/src/: BindingSocket.cpp  ListeningSocket.cpp  SimpleSocket.cpp
notes/: NGINX.md
resources/default/: nginx.conf
resources/default/htmls/: 403.html  404.html  index.html  index2.html
resources/default/www/loc_3/: loc_3_index.html
resources/default/www/loc_4/: index.html
resources/example/htmls/: index.html
resources/example/htmls/home/: index.html
resources/example/htmls/something/: whatewer.html
resources/example/web/: index.css  index.html
src/: Logger.cpp  Logger.h  main.cpp
src/Config/: Node.cpp
src/Config/config/: Config.cpp  Config.h  ConfigCreate.cpp
src/Config/location/: ErrPage.h  LimitExcept.h  Location.cpp  LocationHandleReturn.cpp
src/Config/server_configuration/: ServerConfiguration.cpp  ServerConfiguration.h
src/Server/: Server.cpp  Server.h  ServerExceptions.cpp  ServerExceptions.h  ServerInit.cpp  ServerManager.cpp  ServerManager.h
src/Server/ServerManager/includes/: HttpRequest.hpp  HttpResponse.hpp  Server.hpp  ServersManager.hpp
src/Server/ServerManager/src/: HttpRequest.cpp  HttpResponse.cpp  Server.cpp  ServersManager.cpp
src/Server/Sockets/: HeaderSockets.hpp
src/Server/Sockets/includes/: BindingSocket.hpp  ConnectingSocket.hpp  ListeningSocket.hpp  SimpleSocket.hpp
src/Server/Sockets/src/: BindingSocket.cpp  ConnectingSocket.cpp  ListeningSocket.cpp  (+1 more)
src/Server/location_synth/: LocationSynth.cpp  SynthFoundExact.cpp  SynthNotFound.cpp
src/Server/request/: ClientRequest.cpp  ClientRequest.h  ClientRequestRequestHandlers.cpp  ClientRequestURLHandlers.cpp  ClientRequestURLParamsHandlers.cpp  RequestExceptions.cpp  RequestExceptions.h
src/Server/response/: ServerResponse.cpp  ServerResponse.h
test/: CMakeLists.txt
test/lib/: CONTRIBUTING.md  README.md
test/lib/ci/: windows-presubmit.bat
test/lib/docs/: advanced.md  faq.md  gmock_cook_book.md  gmock_faq.md  gmock_for_dummies.md  pkgconfig.md  primer.md  quickstart-bazel.md  quickstart-cmake.md
test/lib/docs/reference/: actions.md  matchers.md  testing.md
test/lib/googlemock/include/gmock/: gmock-actions.h  gmock-matchers.h  gmock-spec-builders.h
test/lib/googlemock/include/gmock/internal/custom/: README.md
test/lib/googlemock/src/: gmock-matchers.cc  gmock.cc
test/lib/googletest/: README.md
test/lib/googletest/include/gtest/: gtest-param-test.h  gtest-printers.h
test/lib/googletest/include/gtest/internal/: gtest-internal.h  gtest-param-util.h  gtest-port.h  gtest-type-util.h
test/lib/googletest/include/gtest/internal/custom/: README.md
test/lib/googletest/src/: gtest-port.cc  gtest.cc
test/test_resources/nested_locations/: nginx.conf
test/test_resources/nested_locations/www/: root_403.html  root_404.html  root_in_root_403.html  root_in_root_404.html  root_index.html  server_403.html  server_404.html  server_index.html
test/test_resources/nested_locations/www/loc_1/: loc_1_403.html  loc_1_404.html  loc_1_in_root_in_root_403.html  loc_1_in_root_in_root_404.html  loc_1_in_root_in_root_index.html  loc_1_in_root_index.html  loc_1_index.html
test/test_resources/nested_locations/www/loc_1/loc_2/: loc_2_in_loc_1_index.html
test/test_resources/nested_locations/www/loc_1/loc_3/: loc_3_in_loc_1_403.html  loc_3_in_loc_1_404.html
test/test_resources/nested_locations/www/loc_5/loc_6/loc_8/: index.html
test/test_resources/nested_locations/www/loc_5/loc_7/: index.html
test/test_resources/simple/: nginx.conf
test/test_resources/simple/www/: root_index.html
test/test_resources/simple/www/loc_0/: index.html
test/test_resources/simple/www/loc_2/: index.html
test/test_resources/simple/www/loc_3/: index.html
test/test_resources/test_config_samples/: correct_config.conf  correct_config_in_one_line.conf  correct_config_multiple_directives_one_line.conf  corrupted_config_empty_block.conf  corrupted_config_excess_semicolon.conf  corrupted_config_missing_semicolon.conf  corrupted_config_multiple_locations_for_one_path.conf  corrupted_config_multiple_servers_for_one_port.conf  corrupted_config_no_close_brace.conf  corrupted_config_no_open_brace.conf  corrupted_config_sublocation_with_absolute_path.conf  corrupted_config_sublocation_without_absolute_path.conf
test/tests/config_test/config_class_test/setup_from_file_config/: ConfigFileCheckTest.cpp  ConfigSetupFromFileTest.cpp
test/tests/config_test/config_class_test/setup_from_nodes/: ConfigMainContextCheck.cpp  ConfigServerSubcontextsHandlingTest.cpp
test/tests/config_test/location_class_test/functionality_test/: LocationFindSublocationTest.cpp
test/tests/config_test/location_class_test/setup_test/: HandleAddErrPagesTest.cpp  HandleLimitExceptTest.cpp  HandleReturnTest.cpp  HandleUpdateIndexTest.cpp  LocationMarkDirectiveTest.cpp  LocationProcessDirectivesTest.cpp  LocationStaticToolsTest.cpp
test/tests/config_test/server_configuration_class_test/functionality_test/: CheckCorrectLocationContextTest.cpp  NestedConfigLocationSearchTest.cpp  SimpleConfigLocationSearchTest.cpp
test/tests/config_test/server_configuration_class_test/setup_test/: HandleDirectivesTest.cpp  HandleMultistepLocation.cpp  HandleSingleStepLocation.cpp
test/tests/server_test/functionality_test/: LocationSyntFoundExact.cpp  LocationSynthTest.cpp  LocationSynthUtilsTest.cpp  ServerTest.cpp
test/tests/server_test/request_test/: ParsedRequestLevelTest.cpp  RequestLineLevelTest.cpp  SocketLevelTest.cpp  URLLevelTest.cpp
www/: index.html
